Logotypes are now working on firefox too; fix

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -34,8 +34,7 @@
 @font-face {
   font-family: "graphik";
   src: url('/assets/fonts/Graphik-Extralight.otf');
-  font-weight: 300;
-}
+  font-weight: 300}
 
 html, body {
   width: 100%;
@@ -241,6 +240,7 @@ header {
       img{
         max-width: 100%;
         height: auto;
+        width: 100%;
       }
     }
   }
